# src/detail/detailDto.ts
@@ -1,7 +1,18 @@
 export interface CreateDetailDto {
-  orderId: number;
-  detailTitle: string;
-  detailPartNumber: string;
-  avalabilityInWarehouse: boolean;
-  detailPrice: number;
+    orderId: number
+    detailTitle: string
+    detailPartNumber: string
+    avalabilityInWarehouse: boolean
+    detailPrice: number
+    qty: number
+}
+
+export interface DetailDto {
+    id: number
+    orderId: number
+    detailTitle: string
+    detailPartNumber: string
+    avalabilityInWarehouse: boolean
+    detailPrice: number
+    qty: number
 }
